fix: allow underscore in hostname
 - add unit test (see https://wiremock.org/docs/junit-jupiter/#proxy-mode)
 - add debug log to help for future investigation
 - use URL java classe instead of URI java class which is more tolerant

https://gravitee.atlassian.net/browse/APIM-1108
https://github.com/gravitee-io/issues/issues/8946